--- a/box.html
+++ b/box.html
@@ -8,7 +8,7 @@
  <body>
   <canvas id="can1" width="414" height="700"></canvas>
   <canvas id="can2" width="414" height="700"></canvas>
-  <script type="text/javascript" src="./main.js">
+  <script type="text/javascript" src="./index.js">
 </script>
  </body>
 </html>
